--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="css/style.css">
+
   <title>Frontend Mentor | Todo app</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -16,11 +17,19 @@
 </head>
 <body>
 
-  Todo
+  <div class="container">
+    <div class="header-banner">
+      <img src="images/bg-desktop-dark.jpg" alt="">
+    </div>
+    <div class="page-background">
 
-  <!-- Add dynamic number --> items left
+    </div>
+  </div>
+  <!-- Todo -->
 
-  All
+  <!-- Add dynamic number --> <!--items left -->
+
+  <!-- All
   Active 
   Completed
 
@@ -31,6 +40,6 @@
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
 </body>
 </html>
