Imported the google font.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
       <img src="images/bg-desktop-dark.jpg" alt="">
     </div>
     <div class="page-background">
-
+      <div class="todo-container">
+        
+      </div>
     </div>
   </div>
   <!-- Todo -->
