Removed the element from the main layout and Centered it.

--- a/index.html
+++ b/index.html
@@ -23,17 +23,19 @@
     </div>
     <div class="page-background">
       <div class="todo-container">
-        <div class="header">
-          <p class="header-text">TODO</p>
-          <div class="img-icon">
-            <img src="images/icon-sun.svg" alt="">
-          </div>
-          
+      </div>
+    </div>
+    <div class="main-content">
+      <div class="header">
+        <p class="header-text">TODO</p>
+        <div class="img-icon">
+          <img src="images/icon-sun.svg" alt="">
         </div>
-
-        <div class="todo-input">
-          <input class="current-item" type="text">
-        </div>
+        
+      </div>
+  
+      <div class="todo-input">
+        <input class="current-item" type="text">
       </div>
     </div>
   </div>
