Positioned the check item in the text input.

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         <div class="img-icon">
           <img src="images/icon-sun.svg" alt="">
         </div>
-        
       </div>
   
       <div class="todo-input">
+        <input class="check-todo" type="checkbox" name="" id="">
         <input class="current-item" type="text">
       </div>
     </div>
