Changed the color of the radio button upon check.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
   
       <div class="todo-input">
-        <input class="check-todo" type="checkbox" name="" id="">
+        <input class="check-todo" type="radio" name="" id="">
         <input class="current-item" type="text">
       </div>
     </div>
