Created one of the dynamically generated todos.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,18 @@
         <input class="check-todo" type="radio" name="" id="">
         <input class="current-item" type="text">
       </div>
+
+      <div class="todo-list">
+        <div class="todo-item">
+          <div class="text-component">
+            <input class="check-todo adjust-to-board" type="radio" name="" id="">
+            <p class="m-l-20 item-text">Complete online javascript course</p>
+          </div>
+          <div class="img-icon">
+            <img src="images/icon-cross.svg" alt="">
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <!-- Todo -->
