Added the texts of the todo items.

--- a/index.html
+++ b/index.html
@@ -38,11 +38,56 @@
         <input class="current-item" type="text">
       </div>
 
-      <div class="todo-list">
-        <div class="todo-item">
+      <div class="todo-list m-t-1">
+        <div class="todo-item b-b-white">
           <div class="text-component">
             <input class="check-todo adjust-to-board" type="radio" name="" id="">
-            <p class="m-l-20 item-text">Complete online javascript course</p>
+            <p class="m-l-20 item-text strike">Complete online javascript course</p>
+          </div>
+          <div class="img-icon">
+            <img src="images/icon-cross.svg" alt="">
+          </div>
+        </div>
+        <div class="todo-item  b-b-white">
+          <div class="text-component">
+            <input class="check-todo adjust-to-board" type="radio" name="" id="">
+            <p class="m-l-20 item-text">Jog around the park 3x</p>
+          </div>
+          <div class="img-icon">
+            <img src="images/icon-cross.svg" alt="">
+          </div>
+        </div>
+        <div class="todo-item b-b-white">
+          <div class="text-component">
+            <input class="check-todo adjust-to-board" type="radio" name="" id="">
+            <p class="m-l-20 item-text">10 minutes meditation</p>
+          </div>
+          <div class="img-icon">
+            <img src="images/icon-cross.svg" alt="">
+          </div>
+        </div>
+        <div class="todo-item b-b-white">
+          <div class="text-component">
+            <input class="check-todo adjust-to-board" type="radio" name="" id="">
+            <p class="m-l-20 item-text">Read for 1 hour</p>
+          </div>
+          <div class="img-icon">
+            <img src="images/icon-cross.svg" alt="">
+          </div>
+        </div>
+        <div class="todo-item b-b-white">
+          <div class="text-component">
+            <input class="check-todo adjust-to-board" type="radio" name="" id="">
+            <p class="m-l-20 item-text">Pick up groceries</p>
+          </div>
+          <div class="img-icon">
+            <img src="images/icon-cross.svg" alt="">
+          </div>
+        </div>
+        <div class="todo-item b-b-white">
+          <div class="text-component">
+            <input class="check-todo adjust-to-board" type="radio" name="" id="">
+            <p class="m-l-20 item-text">Complete todo app on Frontend Mentor</p>
           </div>
           <div class="img-icon">
             <img src="images/icon-cross.svg" alt="">
