Added the menu content.

--- a/index.html
+++ b/index.html
@@ -93,6 +93,17 @@
             <img src="images/icon-cross.svg" alt="">
           </div>
         </div>
+        <div class="todo-item todo-menu">
+          <div class="items-left">5 items left</div>
+          <div class="todo-status">
+            <p>All</p>
+            <p>Active</p>
+            <p>Completed</p>
+          </div>
+          <div class="clear-completed">
+            Clear Completed
+          </div>
+        </div>
       </div>
     </div>
   </div>
