Spaced the paddings of the left and right in the menu container.

--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@
           </div>
         </div>
         <div class="todo-item todo-menu">
-          <div class="items-left">5 items left</div>
+          <div class="items-left"><p class="pointer-cursor">5 items left</p></div>
           <div class="todo-status">
-            <p>All</p>
-            <p>Active</p>
-            <p>Completed</p>
+            <p class="pointer-cursor">All</p>
+            <p class="pointer-cursor">Active</p>
+            <p class="pointer-cursor">Completed</p>
           </div>
           <div class="clear-completed">
-            Clear Completed
+            <p class="pointer-cursor">Clear Completed</p>
           </div>
         </div>
       </div>
