Changed the color on hovering the todo menu underneath.

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="todo-item todo-menu">
           <div class="items-left"><p class="pointer-cursor">5 items left</p></div>
           <div class="todo-status">
-            <p class="pointer-cursor">All</p>
+            <p class="pointer-cursor all-todo-items">All</p>
             <p class="pointer-cursor">Active</p>
             <p class="pointer-cursor">Completed</p>
           </div>
