Aligned the reorder text to the middle (horizontally).

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <div class="main-content">
       <div class="header">
-        <p class="header-text">TODO</p>
+        <h1 class="header-text">TODO</h1>
         <div class="img-icon">
           <img src="images/icon-sun.svg" alt="">
         </div>
@@ -94,16 +94,20 @@
           </div>
         </div>
         <div class="todo-item todo-menu">
-          <div class="items-left"><p class="pointer-cursor">5 items left</p></div>
+          <div class="items-left"><h6 class="pointer-cursor">5 items left</h6></div>
           <div class="todo-status">
-            <p class="pointer-cursor all-todo-items">All</p>
-            <p class="pointer-cursor">Active</p>
-            <p class="pointer-cursor">Completed</p>
+            <h6 class="pointer-cursor all-todo-items">All</h6>
+            <h6 class="pointer-cursor">Active</h6>
+            <h6 class="pointer-cursor">Completed</h6>
           </div>
           <div class="clear-completed">
-            <p class="pointer-cursor">Clear Completed</p>
+            <h6 class="pointer-cursor">Clear Completed</h6>
           </div>
         </div>
+      </div>
+
+      <div class="reorder-text">
+        <h6>Drag and drop to reorder list</h6>
       </div>
     </div>
   </div>
