Hide the cross icon by default.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <input class="check-todo adjust-to-board" type="radio" name="" id="">
             <p class="m-l-20 item-text strike">Complete online javascript course</p>
           </div>
-          <div class="img-icon">
+          <div class="img-icon close-icon">
             <img src="images/icon-cross.svg" alt="">
           </div>
         </div>
@@ -53,7 +53,7 @@
             <input class="check-todo adjust-to-board" type="radio" name="" id="">
             <p class="m-l-20 item-text">Jog around the park 3x</p>
           </div>
-          <div class="img-icon">
+          <div class="img-icon close-icon">
             <img src="images/icon-cross.svg" alt="">
           </div>
         </div>
@@ -62,7 +62,7 @@
             <input class="check-todo adjust-to-board" type="radio" name="" id="">
             <p class="m-l-20 item-text">10 minutes meditation</p>
           </div>
-          <div class="img-icon">
+          <div class="img-icon close-icon">
             <img src="images/icon-cross.svg" alt="">
           </div>
         </div>
@@ -71,7 +71,7 @@
             <input class="check-todo adjust-to-board" type="radio" name="" id="">
             <p class="m-l-20 item-text">Read for 1 hour</p>
           </div>
-          <div class="img-icon">
+          <div class="img-icon close-icon">
             <img src="images/icon-cross.svg" alt="">
           </div>
         </div>
@@ -80,7 +80,7 @@
             <input class="check-todo adjust-to-board" type="radio" name="" id="">
             <p class="m-l-20 item-text">Pick up groceries</p>
           </div>
-          <div class="img-icon">
+          <div class="img-icon close-icon">
             <img src="images/icon-cross.svg" alt="">
           </div>
         </div>
@@ -89,7 +89,7 @@
             <input class="check-todo adjust-to-board" type="radio" name="" id="">
             <p class="m-l-20 item-text">Complete todo app on Frontend Mentor</p>
           </div>
-          <div class="img-icon">
+          <div class="img-icon close-icon">
             <img src="images/icon-cross.svg" alt="">
           </div>
         </div>
