--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="todo-item b-b-white">
           <div class="text-component">
             <input class="check-todo adjust-to-board" type="radio" name="" id="">
-            <p class="m-l-20 item-text" onmouseover="hideCloseIcon()">Pick up groceries</p>
+            <p class="m-l-20 item-text">Pick up groceries</p>
           </div>
           <div class="img-icon close-icon">
             <img src="images/icon-cross.svg" alt="">
@@ -89,11 +89,11 @@
             <input class="check-todo adjust-to-board" type="radio" name="" id="">
             <p class="m-l-20 item-text">Complete todo app on Frontend Mentor</p>
           </div>
-          <div class="img-icon">
+          <div class="img-icon close-icon">
             <img src="images/icon-cross.svg" alt="">
           </div>
         </div>
-        <div class="todo-item todo-menu">
+        <div class="todo-menu">
           <div class="items-left"><h6 class="pointer-cursor">5 items left</h6></div>
           <div class="todo-status">
             <h6 class="pointer-cursor all-todo-items">All</h6>
@@ -128,27 +128,19 @@
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
   <script>
-    function hideCloseIcon(e) {
-      var listItem = document.getElementsByClassName("item-text");
-      /*listItem.forEach(itemText => {
-        itemText.addEventListener("click", function( event ) {
-          console.log("Entered.");
-        })
-      });*/
-      for (const child of listItem) {
-        //var currentText = child.closest(".todo-item");
-        //console.log(child);
-        e.style.visibility = "hidden"
-      }
-    }
+    const currentItem = document.querySelectorAll(".todo-item");
+    currentItem.forEach(itemText => {
+      itemText.addEventListener("mouseover", () => {
+        const todoItem = itemText.closest(".todo-item");
+        const closeIcon = todoItem.querySelector(".img-icon");
+        closeIcon.classList.remove("close-icon")
+      })
+      itemText.addEventListener("mouseout", () => {
+        const todoItem = itemText.closest(".todo-item");
+        const closeIcon = todoItem.querySelector(".img-icon");
+        closeIcon.classList.add("close-icon")
+      })
+    })
   </script>
-  <!-- <script>
-    function show(id) {
-      document.getElementById(id).style.visibility = "visible";
-    }
-    function hide(id) {
-      document.getElementById(id).style.visibility = "hidden";
-    }
-  </script> -->
 </body>
 </html>
